// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing LoginForm component should render as expected when there is an error 1`] = `
<section
  id="login"
>
  <Loading
    isLoading={false}
  />
  <div
    className="container"
  >
    <ErrorMessage
      errors={
        Object {
          "message": "error",
        }
      }
    />
    <div
      className="form"
    >
      <div
        className="form-icon-container"
      >
        <div
          className="center form-icon blue"
        >
          <i
            className="icon ion-person"
          />
        </div>
      </div>
      <h1
        className="center"
      >
        Create Account
      </h1>
      <form
        id="LoginForm"
        onSubmit={[Function]}
      >
        <input
          className="form-input"
          id="email"
          name="usernameOrEmail"
          onChange={[Function]}
          placeholder="Email or Username"
          required={true}
          type="text"
          value=""
        />
        <input
          className="form-input"
          id="password"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          required={true}
          type="password"
          value=""
        />
        <input
          className="form-input btn btn-primary"
          id="submit-btn"
          type="submit"
          value="Login"
        />
      </form>
      <div
        className="form-footer center"
      >
        <p>
          Not a member?  
          <Link
            className="blue"
            replace={false}
            to="/signup"
          >
            Create Account
          </Link>
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`testing LoginForm component should render as expected when there is no error 1`] = `
<section
  id="login"
>
  <Loading
    isLoading={false}
  />
  <div
    className="container"
  >
    <ErrorMessage
      errors={Object {}}
    />
    <div
      className="form"
    >
      <div
        className="form-icon-container"
      >
        <div
          className="center form-icon blue"
        >
          <i
            className="icon ion-person"
          />
        </div>
      </div>
      <h1
        className="center"
      >
        Create Account
      </h1>
      <form
        id="LoginForm"
        onSubmit={[Function]}
      >
        <input
          className="form-input"
          id="email"
          name="usernameOrEmail"
          onChange={[Function]}
          placeholder="Email or Username"
          required={true}
          type="text"
          value=""
        />
        <input
          className="form-input"
          id="password"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          required={true}
          type="password"
          value=""
        />
        <input
          className="form-input btn btn-primary"
          id="submit-btn"
          type="submit"
          value="Login"
        />
      </form>
      <div
        className="form-footer center"
      >
        <p>
          Not a member?  
          <Link
            className="blue"
            replace={false}
            to="/signup"
          >
            Create Account
          </Link>
        </p>
      </div>
    </div>
  </div>
</section>
`;
